[tool.poetry]
name = "voxpop"
version = "0.1.0"
description = ""
authors = ["Darkhan15 <darkhan.tleubayev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
